2004-10-22 Magnus Hagdorn
 * CF_IOrsl.py: new class for handling RSL data base
 * CF_rsl.py: plot RSL curve
 * CF_file.py: get min/max latitude and longitude
 * CF_loadfile.py: added method to interpolate field using splines,
	           added method to extraxr RSL data at geographic location
 * CF_area.py: added method to plot RSL locations on map
 * CF_options.py: added some RSL options
 * plotRSL.py: plot funky RSL diagram
 * updated README
	
2004-09-29 Magnus Hagdorn
 * CF_profile.py: remove triangulate from imports
 * plotEISMINT.py: tidy up help messages (we don't need to ask for variables)
 * ran_topo.py: added very basic random (white noise) topo generator

2004-09-28 Magnus Hagdorn
 * CF_loadfile.py: made CFchecklist public, fixed ice vol/area calculations to ignore missing data
 * CF_options.py: can select a profile without selecting variable
 * CF_profile.py: added method to extract ice extent along profile
 * plotEISMINT.py: added GPL license
 * plotCFstats.py: new program to plot time series of model statistics 
 * setup.py: handle plotCFstats.py
	
2004-09-17 Magnus Hagdorn
 * added glide launcher
 * added super EISMINT plotter

2004-09-16 Magnus Hagdorn
 * CF_colourmap.py: need to find min max of field by hand so we honour the NC_FILL_VALUE
 * CF_options.py: coordinates should be list rather than tuples
 * CF_profile.py: linearly interpolate vertical layers for each column
 * CF_utils.py: add linear interpolation routine
 * temp.cpt, mb.cpt: change background and foreground to white

2004-08-26 Magnus Hadorn
 * CF_area.py: we can now also plot profile lines
 * CF_loadfile.py: add methods to calculate ice area and volume
 * CF_profile.py: we can now load 2D profiles (e.g. temperatures etc)
   this does not quite work yet because we use triangulate which will interpolate
   data outside ice sheet
 * CF_profilearea.py: simple plotting area for profiles
 * CF_timeseries.py: use new AutoXY API
 * __init__.py: added CF_profilearea.py